fixed sidebar (navbar) on mobile, & began styling landing for mobile

--- a/src/assets/stylesheets/components/landing.scss
+++ b/src/assets/stylesheets/components/landing.scss
@@ -17,3 +17,20 @@
     color: white;
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .jumbotron {
+    padding: 0px 0px 10px 0px;
+    height: auto;
+  }
+  .home-main {
+    & h1 {
+      font-size: 3em;
+      max-width: 100%;
+    }
+    & p {
+      font-size: 1.2em;
+      max-width: 66%;
+    }
+  }
+}
