--- a/src/assets/stylesheets/globals/sidebar.scss
+++ b/src/assets/stylesheets/globals/sidebar.scss
@@ -124,6 +124,9 @@ html {
   }
   .navbar {
     padding: 2px 0px 2px 10px;
+    position: fixed;
+    width: 100%;
+    z-index: 1001;
   }
   .navbar-toggler {
     font-size: .75rem;
